<resources>
    <string name="app_name">SharingLists</string>
    <string name="sharing_lists">Sharing Lists</string>
    <string name="login_btn">login</string>
    <string name="regsiter_btn">regisiter</string>
    <string name="email_input_hint">Email</string>
    <string name="password_input_hint">Password</string>
    <string name="name_input_hint">Name</string>
    <string name="logo_desc">logo</string>
    <string name="login_label">Login</string>
    <string name="register_label">Register</string>
    <string name="title_input_hint">Type your title here...</string>
    <string name="description_input_hint">Type your description here...</string>
    <string name="createlist_btn">Create List</string>
    <string name="share">Share</string>
    <string name="logout_menu">Logout</string>
    <string name="refresh_lists_menu">Refresh Lists</string>
    <string name="sharing_code_menu">Show Sharing Code</string>
    <string name="main_my_lists_title">My Lists:</string>
</resources>
