<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.RegisterActivity">

    <EditText
        android:id="@+id/input_register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/name_input_hint"
        android:autofillHints="" />

    <EditText
        android:id="@+id/input_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_input_hint"
        android:autofillHints="" />

    <EditText
        android:id="@+id/input_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_input_hint"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_register_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:onClick="registerUser"
        android:text="@string/regsiter_btn" />
</LinearLayout>