<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">



        <EditText
            android:id="@+id/input_newlist_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/title_input_hint"
            android:padding="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:alpha=".3"
            android:background="@android:color/black" />

        <EditText
            android:id="@+id/input_newlist_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/description_input_hint"
            android:inputType="textMultiLine"
            android:padding="10dp" />

        <Button
            android:id="@+id/new_note_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createlist_btn"
            android:onClick="createList"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>